# gem-run

./: .gitignore  Dockerfile  Google_Cloud_x_MLB(TM)_Hackathon_Exploring_MLB_Provided_Datasets.ipynb  LICENSE  README.md  app.py  dataflow.sh  deploy.ps1  deploy.sh  ds.md  google_auth.py  hackathon.md  intro_function_calling-v1.0.0.ipynb  network.sh  procfile  pyproject.toml  requirements.txt
.idx/: dev.nix
datasets/: bat-tracking.csv  batters.csv  exit_velocity.csv  expected_stats.csv  pitchers.csv  pitchers_ev.csv
hosting/: .firebaserc  firebase.json
mlb_fan_highlights/src/: Evaluation.py  Home.py  RAG.py  alloy.py  alloydb.py  anchor.py  app.py  app1.py  app2.py  audio_mixer.py  auth.py  batters_players_stats.py  brown.py  bs_rag.py  bumblebee.py  cli_app.py  compound.py  conc_poland.py  config.yaml  corefunctions.md  documentation.md  dodgers_games_20250108_205028.csv  dodgers_games_20250108_221628.csv  dodgers_player_stats_20250108_205028.csv  dodgers_player_stats_20250108_221628.csv  dodgers_plays_20250108_205028.csv  dodgers_plays_20250108_221628.csv  donut.py  embed.py  evaluator.py  feedback.py  firebase_config.py  games_cache_2024.json  gcs_handler.py  gem.py  gemini2.py  gemnice.py  gemson.py  genseng.py  headshots.py  (+105 more)
mlb_fan_highlights/src/data_ingestion/: data_loader.py  gumbo_subscriber.py
mlb_fan_highlights/src/data_processing/: data_processor.py
mlb_fan_highlights/src/dodgers-mlb-data-processor/: .env.yaml  Dockerfile  README.MD  deploy.sh  main.py  requirements.txt
mlb_fan_highlights/src/mlb_rosters/: Dodgers_data_quality_20250108_202805.txt  Dodgers_roster_20250108_202805.csv
mlb_fan_highlights/src/pages/: Evaluation.py  Generator.py  RAG.py  brown.py  cloud.py  feedback.py  iframe.py  milo.py  roadmap.py
mlb_fan_highlights/src/pages-soon/: eagle.py  milo.py
mlb_fan_highlights/src/prev-pages/: Generator.py  RAG.py
mlb_fan_highlights/src/tests/: Readme.md  sample_usage.py  test_historical_games.py
mlb_fan_highlights/src/utils/: intro_multimodal_rag_utils.py
