[tool.poetry]
name = "mlb_fan_highlights" 
version = "0.1.0"
description = ""
authors = ["Adedoyinsola Ogungbesan <jdmasciano2@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
google-cloud-pubsub = "^2.27.0" 
google-cloud-storage = "^2.19.0" 
apache-beam = {extras = ["gcp"], version = "^2.61.0"} 
google-cloud-bigquery = "^3.27.0"
google-cloud-aiplatform = "^1.75.0"
pandas = "^2.2.3"
google-auth = "^2.37.0"
google-generativeai = "^0.8.3"
matplotlib = "^3.10.0"
streamlit = "^1.41.1"
ratelimit = "^2.2.1"
ipython = "^8.31.0"
google-cloud-texttospeech = {extras = ["beta"], version = "^2.23.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.3.1" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"