[tool.poetry]
name = "mlb_fan_highlights" 
version = "0.1.0"
description = ""
authors = ["Adedoyinsola Ogungbesan <jdmasciano2@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
google-cloud-pubsub = "^2.27.0" 
google-cloud-storage = "^2.19.0" 
apache-beam = {extras = ["gcp"], version = "^2.61.0"} 
google-cloud-bigquery = "^3.27.0"
google-cloud-aiplatform = "^1.75.0"
pandas = "^2.2.3"
google-auth = "^2.37.0"
google-generativeai = "^0.8.3"
matplotlib = "^3.10.0"
streamlit = "^1.41.1"
ratelimit = "^2.2.1"
ipython = "^8.31.0"
google-cloud-texttospeech = {extras = ["beta"], version = "^2.23.0"}
firebase-admin = "^6.6.0"
pydub = "^0.25.1"
pymongo = {extras = ["srv"], version = "^4.10.1"}
langchain-google-alloydb-pg = "^0.9.0"
langchain-google-vertexai = "^2.0.11"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
starlette = "^0.45.2"
cryptography = "^44.0.0"
google-genai = "^0.6.0"
requests = "^2.32.3"
google-cloud-logging = "^3.11.3"
gunicorn = "^23.0.0"
google-cloud-secret-manager = "^2.22.1"
ffprobe = "^0.5"
ffmpeg = "^1.4"
protobuf = "^5.29.3"
asyncpg = "^0.30.0"
pg8000 = "^1.31.2"
google-cloud-alloydb-connector = "^1.7.0"
google-cloud-firestore = "^2.20.0"
langchain-google-firestore = "^0.5.0"
pytz = "^2024.2"
google-cloud-video-transcoder = "^1.14.0"
db-dtypes = "^1.4.1"
werkzeug = "^3.1.3"
langchain-mongodb = "^0.4.0"
pypdf = "^5.3.0"
plotly = "^6.0.0"
moviepy = "^2.1.2"
scikit-learn = "^1.6.1"
json5 = "^0.10.0"
flask-cors = "^5.0.1"
fitz = "^0.0.1.dev2"
pymupdf = "^1.25.4"
langgraph = "^0.3.21"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

